<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="56dp"
    android:background="@drawable/transparent_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="back button"
            android:src="@drawable/collapse_catalogue"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:padding="8dp" />

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="model image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Furniture Name"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="€0.00"
            android:textSize="18sp"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/furniture_description"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimensions"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/itemHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Height: None"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/itemWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Width: None"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/itemDepth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Depth: None"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colours"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemColours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="None"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texture"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemTexture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="None"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/place_in_ar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_in_ar"
            android:textSize="16sp"
            android:background="@drawable/round_btn"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</ScrollView>